<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center">

        <TextView
            android:id="@+id/tv_tractoramatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/tv_tractora"/>
        <TextView
            android:id="@+id/tv_cisternamatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/tv_cisterna"/>
        <TextView
            android:id="@+id/tv_codcond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombrecond"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_docyprocesocarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docyprocesodecarga"/>

        <CheckBox
            android:id="@+id/cb_permisoconducir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permiso_conducir"/>
        <CheckBox
            android:id="@+id/cb_adrcond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adrcond"/>
        <CheckBox
            android:id="@+id/cb_tc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc2c"/>

        <CheckBox
            android:id="@+id/cb_itvt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itvt"/>
        <CheckBox
            android:id="@+id/cb_adrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adrt"/>
        <CheckBox
            android:id="@+id/cb_itvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itvc"/>
        <CheckBox
            android:id="@+id/cb_adrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adrc"/>
        <CheckBox
            android:id="@+id/cb_fichaseguridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ficha_seguridad"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_tablacalibracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tablacal"/>
            <EditText
                android:id="@+id/et_tablacalibracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/et_tablacal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_transpondert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transpondert"/>

            <Button
                android:id="@+id/btn_transpondert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_transponderc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transponderc"/>

            <Button
                android:id="@+id/btn_transponderc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_superficiesuperior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/superficiesuperior"/>

            <Button
                android:id="@+id/btn_superficiesuperior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_posicionvehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posicionvehiculo"/>

            <Button
                android:id="@+id/btn_posicionvehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_frenoestacionamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frenoestacionamiento"/>
            <Button
                android:id="@+id/btn_frenoestacionamiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_baterias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/desconectadobaterias"/>

            <Button
                android:id="@+id/btn_baterias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_apagallamas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apagallamas"/>


            <Button
                android:id="@+id/btn_apagallamas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_movil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/movil"/>
            <Button
                android:id="@+id/btn_movil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_interruptores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interruptoresemergencia"/>
            <Button
                android:id="@+id/btn_interruptores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_scully"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scully"/>
            <Button
                android:id="@+id/btn_scully"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_manguera_gases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recvap"/>
            <Button
                android:id="@+id/btn_manguera_gases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_purga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purga"/>
            <Button
                android:id="@+id/btn_purga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tagsok"/>
            <Button
                android:id="@+id/btn_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_ropa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ropa"/>
            <Button
                android:id="@+id/btn_ropa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>