<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Fragments.ResultadoInspeccionFragment">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="4dp">

                <CheckBox
                    android:id="@+id/cb_inspeccionada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/inspeccionada" />

                <CheckBox
                    android:id="@+id/cb_favorable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/favorable" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_desfavorable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:text="@string/desfavorable" />

                    <EditText
                        android:id="@+id/et_fechadesfavorable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.5"
                        android:enabled="false"
                        android:hint="@string/fechaDesfavorable"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_bloqueo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:text="@string/bloqueo" />

                    <EditText
                        android:id="@+id/et_fechabloqueo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.5"
                        android:enabled="false"
                        android:hint="@string/fechaBloqueo"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_revisado"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.5"
                        android:checked="false"
                        android:text="@string/revisado" />

                    <EditText
                        android:id="@+id/et_fecha_revisado"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.5"
                        android:enabled="false"
                        android:hint="@string/fechaRevisado"
                        android:inputType="date" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_comentarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comentariosfinales" />

                <EditText
                    android:id="@+id/comentarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="introducir comentarios"
                    android:inputType="textMultiLine" />

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnWidth="110dp"
                    android:gravity="center"
                    android:horizontalSpacing="10dp"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp">


                </GridView>





            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:textColor="#FFF"
            android:text="Guardar"/>


    </LinearLayout>


</FrameLayout>